<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_academics"
            android:icon="@drawable/ic_assignment_black_48dp"
            android:title="@string/academics" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_person_pin_black_48dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_discuss"
            android:icon="@drawable/ic_question_answer_black_48dp"
            android:title="@string/Discuss" />
        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/ic_business_center_black_48dp"
            android:title="@string/department" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_compare_arrows_black_48dp"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

    </group>


    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_label_outline_black_48dp"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_power_settings_new_black_48dp"
                android:title="@string/signout" />
        </menu>
    </item>

</menu>
