<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_department"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dell.nirvana1.AddUserActivity"
    android:orientation="vertical"
    android:weightSum="1">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="add new user"
      android:textAllCaps="true"
      android:textSize="24sp"
      android:layout_margin="8dp"/>

  <AutoCompleteTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/prompt_uname"
      android:id="@+id/new_username"
      style="@style/EditorFieldStyle"
      android:layout_margin="16dp"
      android:maxLength="10" />

  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sec_question"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_margin="16dp"/>


    <Spinner

        android:layout_gravity="center_horizontal"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/dept_spinner"
        android:splitMotionEvents="true"
        android:backgroundTint="#966697"
        />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_answer"
        android:id="@+id/new_answer"
        style="@style/EditorFieldStyle"
        android:layout_margin="16dp"/>

    <ImageButton
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_menu_send"
        android:id="@+id/button_adduser"
        android:elevation="9dp"
        style="@android:style/Widget.ImageButton"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:layout_weight="0.08"
        android:layout_marginLeft="16dp"/>


</LinearLayout>
